--- a/sass/media/_media-568.sass
+++ b/sass/media/_media-568.sass
@@ -28,15 +28,20 @@
     &__description
       margin-bottom: 10px
     &__wrapper
-      margin-top: 43px
-      max-width: 400px
+      margin-top: 20px
+      max-width: 100%
       flex-wrap: wrap
+      flex-direction: column
+      align-items: center
+      text-align: center
     &__comment
       margin-right: 20px
       margin-top: 5px
       font-size: 13px
       line-height: 15px
       max-width: 200px
+      &-wrapper
+        margin-top: 10px
   .web-design
     &__text
       margin-top: 310px
