--- a/sass/sections/_articles.sass
+++ b/sass/sections/_articles.sass
@@ -133,6 +133,8 @@
       max-width: 30px
       overflow: hidden
       text-overflow: ellipsis
+    &-wrapper
+      display: flex
   &__link
     margin-right: 5px
     fill: #BCBFC2
