--- a/sass/sections/_main-display.sass
+++ b/sass/sections/_main-display.sass
@@ -2,7 +2,7 @@
   position: relative
   padding-top: 60px
   padding-bottom: 68px
-  background: url(../img/news/photo-large-1.png)
+  background: url(../img/news/photo-large-1.webp)
   background-repeat: no-repeat
   background-size: cover
   background-position: center
