--- a/css/style.css
+++ b/css/style.css
@@ -868,7 +868,7 @@ a:hover {
   position: relative;
   padding-top: 60px;
   padding-bottom: 68px;
-  background: url(../img/news/photo-large-1.png);
+  background: url(../img/news/photo-large-1.webp);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
