--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -101,11 +101,13 @@ a
 .shown
   display: inline-block
 .heart
+  position: relative
   color: #BCBFC2
   background-color: transparent
   border: none
   outline: none
   cursor: pointer
+  z-index: 999
   &_active
     color: $primary
 .like
