--- a/sass/sections/_comments.sass
+++ b/sass/sections/_comments.sass
@@ -144,8 +144,12 @@
       outline: none
       cursor: pointer
     &-link
+      display: flex
       text-decoration: none
       color: $title-color-dark
+      fill: #BCBFC2
+      &:hover
+        fill: $primary
 .comment-block
   padding: 30px 40px 35px 30px
   margin-top: 60px
