--- a/sass/sections/_other-articles.sass
+++ b/sass/sections/_other-articles.sass
@@ -70,15 +70,19 @@
         line-height: 20px
         color: $text-color-dark
     &_small
+      position: relative
       padding: 25px 25px 27px 25px
       width: 263px
       background-color: #fff
       border-radius: 10px
       &:hover
         background-color: #eeeeee
-    &_link
-      text-decoration: none
-      color: inherit
+    &-link
+      position: absolute
+      top: 0
+      left: 0
+      right: 0
+      bottom: 0
   &__button
     height: 40px
     text-decoration: none
