--- a/sass/media/_media-568.sass
+++ b/sass/media/_media-568.sass
@@ -11,7 +11,7 @@
   .articles
     padding-top: 125px
     &-grid
-      grid-template-rows: repeat(9, 230px)
+      grid-template-rows: 230px auto 230px 230px 230px 230px 230px 230px 230px
     &__card
       &_dreamwork
         background-size: 202px 209px
@@ -31,17 +31,20 @@
       margin-top: 20px
       max-width: 100%
       flex-wrap: wrap
-      flex-direction: column
+      // flex-direction: column
       align-items: center
-      text-align: center
+      justify-content: flex-start
+      // text-align: center
     &__comment
       margin-right: 20px
       margin-top: 5px
       font-size: 13px
       line-height: 15px
-      max-width: 200px
+      width: 100%
       &-wrapper
         margin-top: 10px
+      &-numbers
+        margin-top: 5px
   .web-design
     &__text
       margin-top: 310px
