--- a/sass/media/_media-992.sass
+++ b/sass/media/_media-992.sass
@@ -87,7 +87,12 @@
     &__link
       &:hover
         color: #BCBFC2
+  .tools
+    &:hover
+      background-color: #fff
   .other-article
+    &:hover
+      background-color: #fff
     &__description
       &_free
         margin-bottom: 12px
