--- a/sass/sections/_articles.sass
+++ b/sass/sections/_articles.sass
@@ -68,8 +68,11 @@
   padding: 35px 0 13px 35px
   &__card
     &-link
-      text-decoration: none
-      color: $title-color-dark
+      position: absolute
+      top: 0
+      right: 0
+      left: 0
+      bottom: 0
   &__text
     max-width: 238px
     &::after
@@ -104,12 +107,14 @@
     font-size: 14px
     line-height: 20px
   &__wrapper
+    position: relative
     margin-top: 15px
     display: flex
     align-items: center
     text-decoration: none
     color: $text-color-dark
     fill: #BCBFC2
+    z-index: 99 
     &:hover
       fill: #4592FF
   &__avatar
@@ -152,16 +157,16 @@
     margin-right: 5px
     width: 15px
     height: 15px
-.div
-  margin-top: 15px
-  display: flex
-  align-items: center
 .web-design
+  position: relative
   padding: 0 25px 25px 25px
   &__card
     &-link
-      text-decoration: none
-      color: $text-color-light
+      position: absolute
+      top: 0 
+      left: 0
+      right: 0
+      bottom: 0
   &__text
     margin-top: 160px
   &__subtitle
@@ -187,10 +192,12 @@
     &-link
       text-decoration: none
   &__wrapper
+    position: relative
     display: flex
     align-items: center
     text-decoration: none
     color: inherit
+    z-index: 99
   &__link
     color: #BCBFC2
     &:hover
@@ -238,6 +245,9 @@
     background-color: #3DC47E
     border-radius: 3px
 .tools
+  position: relative
+  &:hover
+    background-color: #eeeeee
   &__image
     width: 100%
     height: 275px
@@ -254,10 +264,16 @@
     line-height: 25px
     color: $title-color-dark
   &__link
-    text-decoration: none
-    color: $title-color-dark
+    position: absolute
+    top: 0
+    left: 0
+    right: 0
+    bottom: 0
 .other-article
+  position: relative
   padding: 25px 25px 30px 25px
+  &:hover
+    background-color: #eeeeee
   &__title
     margin: 0
     margin-bottom: 5px
@@ -268,8 +284,11 @@
     line-height: 25px
     color: $title-color-dark
   &__link
-    text-decoration: none
-    color: inherit
+    position: absolute
+    right: 0
+    left: 0
+    bottom: 0
+    top: 0
   &__description
     margin: 0
     margin-bottom: 10px
