--- a/sass/sections/_header.sass
+++ b/sass/sections/_header.sass
@@ -67,6 +67,7 @@
       border-radius: 10px
       background-color: #656B70
       outline: none
+      cursor: pointer
       &_light
         background-color: #F5F5F5
     &__menu
