--- a/sass/media/_media-1200.sass
+++ b/sass/media/_media-1200.sass
@@ -8,6 +8,11 @@
   .main-info
     &__wrapper
       max-width: 960px
+  .features
+    &__wrapper
+      margin-left: 15px
+      &::after
+        margin-left: 15px
   .articles
     &-grid
       grid-column-gap: 15px
