--- a/sass/sections/_main-display.sass
+++ b/sass/sections/_main-display.sass
@@ -29,6 +29,7 @@
     background: linear-gradient(0deg, rgba(38, 45, 51, 0.75), rgba(38, 45, 51, 0.75))
     z-index: -1
   &__container
+    position: relative
     margin: auto
     max-width: 946px
   &__top
@@ -122,6 +123,6 @@
       margin-right: 0
   &__flag
     position: absolute
-    top: 152px
-    left: 118px
+    top: 91px
+    left: -92px
     cursor: pointer
