--- a/sass/media/_media-767.sass
+++ b/sass/media/_media-767.sass
@@ -223,7 +223,8 @@
       max-width: 550px
       width: 90%
     &__flag
-      left: 90%
+      top: 80px
+      left: 100%
     &__title
       font-size: 30px
       line-height: 30px
