--- a/sass/sections/_header.sass
+++ b/sass/sections/_header.sass
@@ -30,6 +30,23 @@
     &__link
       color: $text-color-light
       text-decoration: none
+      &:hover
+        text-decoration: none
+      &_hover
+        position: relative
+        &::after
+          position: absolute
+          left: 50%
+          bottom: -5px
+          content: ''
+          width: 0
+          height: 2px
+          background-color: $text-color-light
+          transition: all 0.3s
+        &:hover
+          &::after
+            left: 0
+            width: 100%
       &_grey
         color: $numbers-color
     &__search
