--- a/sass/media/_media-992.sass
+++ b/sass/media/_media-992.sass
@@ -13,6 +13,10 @@
           &:hover
             &::after
               width: 0
+        &_grey
+          &:hover
+            &::after
+              width: 0
     &__wrapper
       margin-top: 15px
       justify-content: space-evenly
